# TODO 1: Set the minimum required version of CMake to be 3.10

# TODO 2: Create a project named Tutorial

# TODO 7: Set the project version number as 1.0 in the above project command

# TODO 6: Set the variable CMAKE_CXX_STANDARD to 11
#         and the variable CMAKE_CXX_STANDARD_REQUIRED to True

# TODO 8: Use configure_file to configure and copy TutorialConfig.h.in to
#         TutorialConfig.h

# TODO 3: Add an executable called Tutorial to the project
# Hint: Be sure to specify the source file as tutorial.cxx

# TODO 9: Use target_include_directories to include ${PROJECT_BINARY_DIR}

################### Bare Minimum CMake Setup ####################
### No linking libraries, just one source code main.cpp file. ###
#################################################################

# Specifiy a minimum CMake version
cmake_minimum_required(VERSION 3.10)

# Start a project, right after cmake_minimum_required()
project(Tutorial)

# Create an executable using the specified sorce code
add_executable(Tutorial tutorial.cxx)